@@ -1,5 +1,10 @@
 2014-12-21  Even Rouault  <even.rouault@spatialys.com>
 
+	* tools/thumbnail.c: fix out-of-buffer write
+	http://bugzilla.maptools.org/show_bug.cgi?id=2489 (CVE-2014-8128)
+
+2014-12-21  Even Rouault  <even.rouault@spatialys.com>
+
 	* tools/thumbnail.c, tools/tiffcmp.c: only read/write TIFFTAG_GROUP3OPTIONS
 	or TIFFTAG_GROUP4OPTIONS if compression is COMPRESSION_CCITTFAX3 or
 	COMPRESSION_CCITTFAX4
